AM_CPPFLAGS = -I$(top_srcdir)/include -I$(top_srcdir)/src/aviwriter -I$(top_srcdir)/src

SUBDIRS = 

EXTRA_DIST = 

noinst_LIBRARIES = libhardware.a

libhardware_a_SOURCES = hardware.cpp iohandler.cpp keyboard.cpp \
                        memory.cpp mixer.cpp pic.cpp timer.cpp \
			vga.cpp vga_attr.cpp vga_crtc.cpp vga_dac.cpp vga_draw.cpp vga_gfx.cpp vga_other.cpp \
			vga_memory.cpp vga_misc.cpp vga_seq.cpp vga_s3.cpp

